@@ -36,6 +36,9 @@
    - stevesk@cvs.openbsd.org 2005/10/14 02:17:59
      [ssh-keygen.c ssh.c sshconnect2.c]
      no trailing "\n" for log functions; ok djm@
+   - stevesk@cvs.openbsd.org 2005/10/14 02:29:37
+     [channels.c clientloop.c]
+     free()->xfree(); ok djm@
 
 20051102
  - (dtucker) [openbsd-compat/bsd-misc.c] Bug #1108: fix broken strdup().
@@ -3169,4 +3172,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3935 2005/11/05 04:07:33 djm Exp $
+$Id: ChangeLog,v 1.3936 2005/11/05 04:07:59 djm Exp $
